manifests/applications/media/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-prod-media-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: "qbittorrent-prod-media-statefulset-0.qbittorrent.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qbittorrent-prod-media-svc
            port:
              number: 8080
  - host: "qbittorrent-prod-media-statefulset-1.qbittorrent.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qbittorrent-prod-media-svc
            port:
              number: 8080
  - host: "qbittorrent-prod-media-statefulset-2.qbittorrent.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: qbittorrent-prod-media-svc
            port:
              number: 8080
